# QuizNest

./: .gitignore  README.md  index.html  package-lock.json  package.json  release_notes.md  release_notes.txt
.agents/: AGENTS.md
.claude/: settings.local.json
.github/workflows/: build.yml
NEW_LOOK/: .gitattributes  .gitignore  index.html  package-lock.json
NEW_LOOK/agent-note/: FEATURE_LOG.md
NEW_LOOK/docs/: data-structure.md
NEW_LOOK/server/: proxy.js
NEW_LOOK/src/: styles.css
NEW_LOOK/src-tauri/: tauri.conf.json
agent-note/: FEATURE_LOG.md  before_you_write_log.md
agent-notes/: FEATURE_LOG.md
docs/: macos-release.md  swiftui-macos-design.md
scripts/: build-android-arm64.mjs  build-dmg.mjs  build-windows-exe.bat  clean.mjs  sync-dist.mjs
server/: proxy.js
src/: main.js  styles.css  styles.css.bak
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppLayout.js  AvatarCropper.js  ChatPanel.js  MemoryManager.js  Modal.js  Toast.js
src/pages/: ChatPage.js  HomePage.js  NotePage.js  NotebooksPage.js  PdfNotePage.js  PracticePage.js  SetLibraryPage.js  SettingsPage.js  StatsPage.js  WrongBookPage.js
src/prompts/: chat.js  grading.js  pdfNote.js  wrongAnalysis.js
src/services/: backup.js  gradingHistory.js  knowledgeGraph.js  mathRenderCache.js  modelUsageTracker.js  pdfText.js  pptxText.js  reviewScheduler.js  settingsSync.js  studyTracker.js  tauriBridge.js  theme.js  updater.js  (+1 more)
tests/: practice-retry.test.js  settings-sync.test.js
(+31 files in other folders)
