[package]
name = "quiznest"
version = "0.1.27"
description = "A Tauri App"
edition = "2021"

[lib]
name = "quiznest"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
